@@ -23,6 +23,7 @@ import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.LinkedList;
 import java.util.Map;
 import java.util.List;
@@ -193,11 +194,13 @@ public class ProfilService extends AbstractService<ProfilDTO, ProfilModel> imple
                     profilRegisterDTO.getEmail(),
                     profilRegisterDTO.getPassword(),
                     profilRegisterDTO.getTelephone(),
+                    LocalDateTime.now(),
                     profilRegisterDTO.getStatut(),
                     profilRegisterDTO.getBio(),
                     profilRegisterDTO.getPhoto()
             );
-            if (list.get(0).getStatus().equalsIgnoreCase("OK")) {
+            System.out.println(list);
+            if (list.getFirst().getStatus().equalsIgnoreCase("OK")) {
                 response.setContent(profilRegisterDTO);
             } else {
                 response.setErrorMessage(ErrorMessageEnum.USER_CREATION_ERROR.name());
